# ordr

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  bench_hyperfine.py  build_lib.py  index.html  lint.py  mkdocs.yml  pyproject.toml  run_examples.py  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/algorithms/: index.html
api/benchmark/: index.html
api/cli/: index.html
api/smart/: index.html
api/visualize/: index.html
benches/: add_vs_builtin.py  sort_bench.rs
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md
docs/api/: algorithms.md  benchmark.md  cli.md  smart.md  visualize.md
docs/guides/: benchmarking.md  choosing-an-algorithm.md  rust-python-interop.md
docs/internals/: adaptive-dispatch.md  architecture.md
examples/: basic_sort.py  benchmark_example.py  smart_sort_example.py
getting-started/: index.html
guides/benchmarking/: index.html
guides/choosing-an-algorithm/: index.html
guides/rust-python-interop/: index.html
internals/adaptive-dispatch/: index.html
internals/architecture/: index.html
python/ordr/: __init__.py  _ordr.pyi  benchmark.py  cli.py  visualize.py
search/: search_index.json
src/: lib.rs
src/adaptive/: smart.rs
src/algorithms/: bubble.rs  heap.rs  insertion.rs  intro.rs  merge.rs  mod.rs  pdq.rs  quick.rs  radix.rs  sorting_network.rs  tim.rs
src/parallel/: mod.rs  par_merge.rs
src/utils/: analysis.rs
tests/: test_algorithms.py  test_benchmark.py  test_edge_cases.py  test_smart.py
