[package]
name = "ordr-python"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["ordr contributors"]
description = "High-performance adaptive sorting for Python, powered by Rust"
license = "MIT"
repository = "https://github.com/programmersd21/ordr"
keywords = ["sorting", "algorithms", "performance", "python"]
categories = ["algorithms", "data-structures"]

[lib]
name = "ordr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
numpy = "0.20"
mimalloc = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sort_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
